force-app/main/default/objects/PF_Run__c/PF_Run__c.object-meta.xml
<CustomObject>
    <description>Master record tracking a single Prompt Factory pipeline execution</description>
    <label>Prompt Factory Run</label>
    <nameField>
        <displayFormat>PFR-{00000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Factory Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>