force-app/main/default/objects/PF_Run__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <description>Reference to the GPTfy AI Connection to use for this pipeline run</description>
    <inlineHelpText>Select the AI Model (GPTfy Connection) to use for generating prompts</inlineHelpText>
    <label>AI Model</label>
    <length>18</length>
    <type>Text</type>
</CustomField>