force-app/main/default/objects/PF_Run__c/fields/Business_Context__c.field-meta.xml
<CustomField>
    <fullName>Business_Context__c</fullName>
    <description>Plain-text business requirements describing what the prompt should accomplish</description>
    <label>Business Context</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>