force-app/main/default/objects/PF_Run__c/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <description>Website URL of the company/customer being analyzed. Used for company research to enrich prompt context with business intelligence about the target organization.</description>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>