force-app/main/default/objects/PF_Run__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>Timestamp when the pipeline run completed (success or failure)</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>