force-app/main/default/objects/PF_Run__c/fields/Created_DCM_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_DCM_Id__c</fullName>
    <description>ID of the generated DCM</description>
    <label>Created DCM Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>