force-app/main/default/objects/PF_Run__c/fields/Created_Prompt_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_Prompt_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the AI Prompt created by this run</description>
    <label>Created Prompt</label>
    <referenceTo>ccai__AI_Prompt__c</referenceTo>
    <relationshipLabel>Prompt Factory Runs</relationshipLabel>
    <relationshipName>Prompt_Factory_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>