force-app/main/default/objects/PF_Run__c/fields/Current_Draft__c.field-meta.xml
<CustomField>
    <fullName>Current_Draft__c</fullName>
    <description>Stores the current AI-generated draft during interactive prompt building sessions. Used for follow-up iterations.</description>
    <label>Current Draft</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>