force-app/main/default/objects/PF_Run__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <description>Current stage number being executed (1-12)</description>
    <label>Current Stage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>