force-app/main/default/objects/PF_Run__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <description>Total execution time in seconds</description>
    <label>Duration (Seconds)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>