force-app/main/default/objects/PF_Run__c/fields/Overall_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Quality_Score__c</fullName>
    <description>Average quality score across all dimensions (1-10 scale)</description>
    <label>Overall Quality Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>