force-app/main/default/objects/PF_Run__c/fields/Prompt_Name__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Name__c</fullName>
    <description>User-provided name for the prompt being created</description>
    <label>Prompt Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>