force-app/main/default/objects/PF_Run__c/fields/Root_Object__c.field-meta.xml
<CustomField>
    <fullName>Root_Object__c</fullName>
    <description>The Salesforce object type this prompt is built for (e.g., Account, Opportunity, Case)</description>
    <label>Root Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>