force-app/main/default/objects/PF_Run__c/fields/Sample_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Sample_Record_Id__c</fullName>
    <description>ID of the sample record used for testing the generated prompt</description>
    <label>Sample Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>