force-app/main/default/objects/PF_Run__c/fields/Sample_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Sample_Record_Ids__c</fullName>
    <description>Comma-separated list of sample record IDs for multi-sample analysis (V2.0 feature). Supports 1-5 record IDs to enable richer data pattern detection across multiple records.</description>
    <inlineHelpText>Optional: Provide 1-5 record IDs (comma-separated) for multi-sample analysis. Example: 006ABC123,006DEF456,006GHI789</inlineHelpText>
    <label>Sample Record IDs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>